# TabSTAR

./: .gitignore  README.md  catboost_testing.py  config.py  do_baseline.py  do_baseline__deprecated.py  do_baseline_refactored.py  do_benchmark.py  do_embeddings.py  do_finetune.py  do_leaderboard.py  do_multilabel.py  do_pretrain.py  do_tabstar.py  do_tabstar_example.py  do_tabstar_openml.py  do_xgboost.py  init.sh  pyproject.toml  requirements.in  requirements.txt  test_py39_install.sh
.devcontainer/mac-m-py311/: devcontainer.json
embeddings/: embeddings_Actors.parquet  embeddings_Description.parquet  embeddings_Director.parquet  embeddings_Title.parquet
embeddings_scripts/: do_embeddings.py
src/: do_tabstar_example.py
tabpfn_augmentor/: data_cleaning.py  do_augmented_benchmark.py  do_results.py  errors.py  evaluator.py  generate_data.py  numericalization.py  original_data_generator.py  results.jsonl
tabstar/: csv_example.py  openml_example.py  tabstar_cls.py  tabstar_model.py  tabstar_verbalizer.py
tabstar_extensions/: README.md  explainability.py  row_embedding.py
tabstar_paper/: benchmark_testing.py  catboost_testing.py  constants.py  do_baseline.py  do_benchmark.py  do_catboost.py  do_finetune.py  do_leaderboard.py  do_pretrain.py  do_tabstar.py  kickstarter.py  tabstar_testing.py  utils.py  xgboost_debug.py
tabular/: constants.py
test/: test_baselines.py  test_do_benchmark.py  test_end2end.py  test_enum_identity.py  test_loss.py  test_python39_pip_install.py  test_seeds.py  test_tabstar_preprocess.py  test_xgboost_benchmark.py
(+662 files in other folders)
